--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-image-picker",
-  "version": "3.2.1",
+  "name": "@imatis/react-native-image-picker",
+  "version": "3.2.1-imatis.1",
   "description": "A React Native module that allows you to use native UI to select media from the device library or directly from the camera",
   "react-native": "src/index.ts",
   "main": "src/index.ts",
@@ -42,7 +42,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-native-image-picker/react-native-image-picker.git"
+    "url": "https://github.com/ImatisVN/react-native-image-picker.git"
   },
   "devDependencies": {
     "@react-native-community/bob": "0.17.1",
